<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Giphy View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="GiphyViewController" customModule="Giphy" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Jqu-UB-lj0">
                                <rect key="frame" x="20" y="48" width="374" height="814"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="236" translatesAutoresizingMaskIntoConstraints="NO" id="Vll-xl-Q7z">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Гифка:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCy-rf-gsu">
                                                <rect key="frame" x="0.0" y="0.0" width="108" height="20.5"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                                <color key="textColor" name="YPWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yBY-Se-hVN">
                                                <rect key="frame" x="344" y="0.0" width="30" height="20.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="counterLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" name="YPWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ARu-x6-AhM">
                                        <rect key="frame" x="0.0" y="40.5" width="374" height="693.5"/>
                                        <subviews>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JAs-TW-kkW">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="693.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="gif"/>
                                            </imageView>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="bottom" secondItem="JAs-TW-kkW" secondAttribute="bottom" id="EG8-8X-kij"/>
                                            <constraint firstAttribute="trailing" secondItem="JAs-TW-kkW" secondAttribute="trailing" id="jBv-hM-cYW"/>
                                            <constraint firstItem="JAs-TW-kkW" firstAttribute="top" secondItem="ARu-x6-AhM" secondAttribute="top" id="wGU-yH-P1J"/>
                                            <constraint firstItem="JAs-TW-kkW" firstAttribute="leading" secondItem="ARu-x6-AhM" secondAttribute="leading" id="xQV-h2-WME"/>
                                        </constraints>
                                    </view>
                                    <stackView opaque="NO" contentMode="scaleAspectFill" distribution="fillEqually" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="NVn-rc-NjS">
                                        <rect key="frame" x="0.0" y="754" width="374" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rAq-mg-Dbx">
                                                <rect key="frame" x="0.0" y="0.0" width="181.5" height="60"/>
                                                <color key="backgroundColor" name="YPWhite"/>
                                                <accessibility key="accessibilityConfiguration" identifier="dislikeBtn"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="8ki-wk-q3G"/>
                                                </constraints>
                                                <inset key="contentEdgeInsets" minX="16" minY="17" maxX="16" maxY="17"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="👎"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="onNoButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="tbL-4s-bYq"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Mv-Ie-T0S">
                                                <rect key="frame" x="192.5" y="0.0" width="181.5" height="60"/>
                                                <color key="backgroundColor" name="YPWhite"/>
                                                <accessibility key="accessibilityConfiguration" identifier="likeBtn"/>
                                                <inset key="contentEdgeInsets" minX="16" minY="17" maxX="16" maxY="17"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="👍"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="onYesButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="KhD-ro-NbU"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="ffa-a1-m1O">
                                <rect key="frame" x="197" y="445" width="20" height="20"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="20" id="7qc-lG-Rkp"/>
                                    <constraint firstAttribute="height" constant="20" id="rbH-jk-gGn"/>
                                </constraints>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YPBlue"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Jqu-UB-lj0" secondAttribute="trailing" constant="20" id="XoX-nM-qTv"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Jqu-UB-lj0" secondAttribute="bottom" id="aog-Dn-FL0"/>
                            <constraint firstItem="ffa-a1-m1O" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="gPf-fu-ZeJ"/>
                            <constraint firstItem="Jqu-UB-lj0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="hJt-6q-UMs"/>
                            <constraint firstItem="ffa-a1-m1O" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="sdI-Ke-b5s"/>
                            <constraint firstItem="Jqu-UB-lj0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="z83-bz-0d0"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="counterLabel" destination="yBY-Se-hVN" id="qpV-IK-gPD"/>
                        <outlet property="dislikeButton" destination="rAq-mg-Dbx" id="tB0-k3-LN5"/>
                        <outlet property="giphyActivityIndicatorView" destination="ffa-a1-m1O" id="cra-TY-q2f"/>
                        <outlet property="giphyImageView" destination="JAs-TW-kkW" id="eUP-ZL-G8D"/>
                        <outlet property="headerLabel" destination="CCy-rf-gsu" id="gkF-Kg-v8J"/>
                        <outlet property="likeButton" destination="9Mv-Ie-T0S" id="5RP-ak-G5a"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="113.74045801526717" y="3.5211267605633805"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YPBlue">
            <color red="0.21500000357627869" green="0.44699999690055847" blue="0.90499997138977051" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YPWhite">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
