...
        alert.addAction(handler)
        present(alert, animated: true, completion: nil)
    }
    
    func showEndOfGiphy() {
        let alert = UIAlertController(title: "Мемы закончились!", message: "Вам понравилось: \(presenter.numberOfLikedGifs())/10", preferredStyle: .alert)
        alert.view.accessibilityIdentifier = "endOfTheGame"
        alert.addAction(UIAlertAction(title: "Хочу посмотреть еще гифок", style: .default){ [weak self] _ in
            guard let self = self else {
                return
            }
            self.presenter.restart()
        })
...
